[project]
name = "tgt-db"
version = "0.1.0"
description = "Targeting cyber database — track hosts, networks, credentials, and relationships in Neo4j"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0",
    "click>=8.0",
    "python-dateutil>=2.8",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[project.scripts]
tgtdb = "tgt_db.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
